maven-debian-helper (2.0.0) UNRELEASED; urgency=medium

  * Update Maven to version 3.0.5

 -- Andrew Schurman <arcticwaters@gmail.com>  Mon, 16 Mar 2015 18:48:32 -0700

maven-debian-helper (1.6.10) experimental; urgency=medium

  * Team upload.
  * Replace dependency on libmaven-compiler-plugin-java with
    libmaven-compiler-plugin-2.5-java.

 -- Miguel Landaeta <nomadium@debian.org>  Sat, 07 Mar 2015 21:10:26 -0300

maven-debian-helper (1.6.9) unstable; urgency=medium

  * Marked jacoco-maven-plugin as a documentation plugin
  * Added org.sonatype.plugins:nexus-staging-maven-plugin to the ignored
    plugins
  * Use the uscan --no-symlink option instead of --rename in the generated
    debian/rule get-orig-source target to work around #748462
  * mh_make: Fixed the error displayed when DEBFULLNAME/DEBEMAIL is not defined
  * The generated control file now specifies Standards-Version: 3.9.6
  * Shortened the Vcs-Browser URL in the generated control file
  * The dependencies of the *-java-doc packages are now recommended to comply
    with the Java policy
  * debian/control:
    - Depend on maven-repo-helper >= 1.8.9
    - Standards-Version updated to 3.9.6 (no changes)

 -- Emmanuel Bourg <ebourg@apache.org>  Fri, 24 Oct 2014 16:31:47 +0200

maven-debian-helper (1.6.8) unstable; urgency=medium

  * The provided Maven dependencies are no longer added to the ${maven:Depends}
    substitution variable
  * Added com.google.code.maven-license-plugin:maven-license-plugin
    to the ignored plugins
  * Use the --download-current-version uscan option in the generated
    debian/rules files
  * Release candidate versions are now properly mangled (1.0-rc2 -> 1.0~rc2)
  * Updated the Maven dependencies

 -- Emmanuel Bourg <ebourg@apache.org>  Mon, 14 Jul 2014 00:51:14 +0200

maven-debian-helper (1.6.7) unstable; urgency=medium

  * The optional Maven dependencies are now suggested and not recommended
    in the package generated by mh_make