@@ -1,6 +1,2 @@
-build.directory=target
-build.javaVersion=1.6
-javadoc.dir=target/api
-classpath.test=/usr/share/java/junit4.jar
 maven.test.skip=true
 
