@@ -32,6 +32,7 @@ include $(_cdbs_rules_path)/buildcore.mk$(_cdbs_makefile_suffix)
 include $(_cdbs_class_path)/maven-vars.mk$(_cdbs_makefile_suffix)
 
 DEB_MAVEN_REPO := $(CURDIR)/debian/maven-repo
+DEB_MAVEN_SCRIPT_DIR := /usr/share/maven-debian-helper/
 
 JAVA_OPTS = \
   $(shell test -n "$(DEB_MAVEN_PROPERTYFILE)" && echo -Dproperties.file.manual=$(DEB_MAVEN_PROPERTYFILE))
@@ -74,7 +75,7 @@ unpatch-poms: debian/$(DEB_JAR_PACKAGE).poms
 	$(RM) -f debian/stamp-poms-patched
 
 debian/maven-repo:
-	/usr/share/maven-debian-helper/copy-repo.sh $(CURDIR)/debian
+	$(DEB_MAVEN_SCRIPT_DIR)/copy-repo.sh $(CURDIR)/debian
 
 post-patches:: patch-poms
 
